--- a/public/index.html
+++ b/public/index.html
@@ -1,12 +1,22 @@
 <head>
-<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css">
-<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+  />
+  <link
+    rel="stylesheet"
+    href="https://cdn.jsdelivr.net/npm/animate.css@4.0.0/animate.min.css"
+  />
 </head>
 
 <body>
-<div class="section">
-  <div class="container">
-    <div id="root"></div>
+  <div class="section">
+    <div class="container">
+      <div id="root"></div>
+    </div>
   </div>
-</div>
 </body>
