Modified fonts - looks retro.

--- a/public/index.html
+++ b/public/index.html
@@ -1,4 +1,10 @@
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+  </style>
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
@@ -12,6 +18,7 @@
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/animate.css@4.0.0/animate.min.css"
   />
+  
 </head>
 
 <body>
