--- a/public/index.html
+++ b/public/index.html
@@ -1,9 +1,19 @@
 <head>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+  </style>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+  </style>
   <link
     rel="stylesheet"
     href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
   />
-  <link rel="stylesheet" href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css" media="(prefers-color-scheme: dark)">
+  <link
+    rel="stylesheet"
+    href="https://jenil.github.io/bulmaswatch/darkly/bulmaswatch.min.css"
+    media="(prefers-color-scheme: dark)"
+  />
   <link
     rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
