--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>GotX Randomizer</title>
 
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
     </style>
     <style>
-      @import url('https://fonts.googleapis.com/css2?family=VT323&display=swap');
+      @import url("https://fonts.googleapis.com/css2?family=VT323&display=swap");
     </style>
     <link
       rel="stylesheet"
