Adds the copy stuff to the game screen. Adjusts points to work with new retroachievements column.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,13 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/animate.css@4.0.0/animate.min.css"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/bulma-tooltip/1.2.0/bulma-tooltip.min.css"
+      integrity="sha512-eQONsEIU2JzPniggWsgCyYoASC8x8nS0w6+e5LQZbdvWzDUVfUh+vQZFmB2Ykj5uqGDIsY7tSUCdTxImWBShYg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
   </head>
   <body>
     <div id="root"></div>
