Add a spinner to the root DOM for react loading. Should show while the database downloads.

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
     />
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <div class="loader"></div>
+    </div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
