--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </style>
     <link
       rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bulma@0.9.4/css/bulma.min.css"
+      href="https://cdn.jsdelivr.net/npm/bulma/css/bulma.min.css"
     />
     <link
       rel="stylesheet"
