Use a new flag-icons library instead of emojis for flags. Better rendering support on windows and android and such.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     />
     <link
       rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.0/css/all.min.css"
     />
     <link
       rel="stylesheet"
@@ -49,6 +49,7 @@
       crossorigin="anonymous"
       referrerpolicy="no-referrer"
     />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flag-icons/css/flag-icons.min.css">
   </head>
   <body>
     <div id="root">
